# Alien

./: .gitignore  Makefile
user/apps/: Makefile
user/apps/harness/: Cargo.toml
user/apps/harness/src/: main.rs  syscall.rs
user/apps/init/src/: main.rs
